# final-project-elzamc

./: .gitignore  README.md  pyproject.toml  source.ipynb  source.py
mental-health-care/: Mental_Health_Care_in_the_Last_4_Weeks.csv
social-media-and-mental-health/: smmh.csv
student-mental-health/: Student Mental health.csv
